# base64

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: bigendiancmake.yml  cmake.yml
include/: base64.hpp
scripts/: run-clang-format.sh
test/: base64_tests.cpp  modp_b64_tests.cpp  roundtrip_test.cpp
